; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_p_lib.c_EVP_PKEY_print_private.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_p_lib.c_EVP_PKEY_print_private.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { {}* }

@.str = private unnamed_addr constant [12 x i8] c"Private Key\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EVP_PKEY_print_private(i32* %0, %struct.TYPE_7__* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %13 = icmp ne %struct.TYPE_6__* %12, null
  br i1 %13, label %14, label %34

14:                                               ; preds = %4
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = bitcast {}** %18 to i32 (i32*, %struct.TYPE_7__*, i32, i32*)**
  %20 = load i32 (i32*, %struct.TYPE_7__*, i32, i32*)*, i32 (i32*, %struct.TYPE_7__*, i32, i32*)** %19, align 8
  %21 = icmp ne i32 (i32*, %struct.TYPE_7__*, i32, i32*)* %20, null
  br i1 %21, label %22, label %34

22:                                               ; preds = %14
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = bitcast {}** %26 to i32 (i32*, %struct.TYPE_7__*, i32, i32*)**
  %28 = load i32 (i32*, %struct.TYPE_7__*, i32, i32*)*, i32 (i32*, %struct.TYPE_7__*, i32, i32*)** %27, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %31 = load i32, i32* %8, align 4
  %32 = load i32*, i32** %9, align 8
  %33 = call i32 %28(i32* %29, %struct.TYPE_7__* %30, i32 %31, i32* %32)
  store i32 %33, i32* %5, align 4
  br label %39

34:                                               ; preds = %14, %4
  %35 = load i32*, i32** %6, align 8
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %37 = load i32, i32* %8, align 4
  %38 = call i32 @unsup_alg(i32* %35, %struct.TYPE_7__* %36, i32 %37, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i32 %38, i32* %5, align 4
  br label %39

39:                                               ; preds = %34, %22
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i32 @unsup_alg(i32*, %struct.TYPE_7__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
